tests/integrations/basic/tests/actual_tests/aux_derive.stderr
error[E0599]: no method named `bar` found for struct `Foo` in the current scope
  --> $DIR/aux_derive.rs:8:7
   |
8  |     x.bar();
   |       ^^^ method not found in `Foo`
...
12 | struct Foo;
   | ---------- method `bar` not found for this struct

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
